--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,14 @@
 <body>
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
 <hr>
+<form action="users" method="post">
+    <select name="user_id" required>
+        <option value="1">1</option>
+        <option value="2">2</option>
+    </select>
+    <br>
+    <button type="submit">Registration</button>
+</form>
 <ul style="font-size: large">
     <li><a href="users">Users</a></li>
     <li><a href="meals">Meals</a></li>
